MODPATRON-91 Refactor